<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login1"
        android:inputType="textEmailAddress"
        android:layout_marginStart="50dp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passWord1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/passWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/passWordSample1"
        android:inputType="numberPassword"
        android:layout_marginStart="50dp"
        />
    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logInButton1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:textColor="#000000"

        />
</LinearLayout>