<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstSubject1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionOne1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/answerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionOneA1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"/>

    <RadioButton
        android:id="@+id/answerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionOneB1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"/>

    <RadioButton
        android:id="@+id/answerThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionOneC1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"/>

    <RadioButton
        android:id="@+id/answerFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionOneD1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginStart="70dp">

    <Button
        android:id="@+id/submitOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"

        />

    <Button
        android:id="@+id/nextOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"

        />

</LinearLayout>
</LinearLayout>