<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstSubject1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionFive1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/answerOne5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionFiveA1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"/>

    <RadioButton
        android:id="@+id/answerTwo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionFiveB1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"/>

    <RadioButton
        android:id="@+id/answerThree5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionFiveC1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"/>

    <RadioButton
        android:id="@+id/answerFour5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionFiveD1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginStart="70dp">

        <Button
            android:id="@+id/submitFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/nextFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"/>

    </LinearLayout>
</LinearLayout>